--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -1259,7 +1259,7 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
 }
 
 @article{bechara-et-al-2001,
-  title={Insensitivity to future consequences following damage to human prefrontal},
+  title={Insensitivity to future consequences following damage to human prefrontal cortex},
   author={Bechara, Antoine and Damasio, Antonio R and Damasio, Hanna},
   journal={The Science of Mental Health: Personality and personality disorder},
   volume={50},
@@ -1277,6 +1277,13 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
   pages={2565--2581},
   year={2011},
   publisher={Oxford University Press}
+}
+
+@article{kluver-bucy-1937,
+  title={" Psychic blindness" and other symptoms following bilateral temporal lobectomy in Rhesus monkeys.},
+  author={Kl{\"u}ver, Heinrich and Bucy, Paul C},
+  journal={American Journal of Physiology},
+  year={1937}
 }
 
 @article{marlowe-et-al-1975,
@@ -1426,4 +1433,245 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
   title         = "Oldest Fossils Reveal When Apes & Monkeys First Diverged",
   url           = "https://www.livescience.com/32029-oldest-monkey-fossil-found.html",
   year          = "2013"
+}
+
+@book{darwin-1872,
+  title={The expression of the emotions in man and animals},
+  author={Darwin, Charles},
+  year={1872},
+  publisher={John Murray}
+}
+
+@article{james-1884,
+ ISSN = {00264423, 14602113},
+ URL = {http://www.jstor.org/stable/2246769},
+ author = {William James},
+ journal = {Mind},
+ number = {34},
+ pages = {188--205},
+ publisher = {[Oxford University Press, Mind Association]},
+ title = {What is an Emotion?},
+ volume = {9},
+ year = {1884}
+}
+
+@article{cannon-1927,
+  title={The James-Lange theory of emotions: A critical examination and an alternative theory},
+  author={Cannon, Walter B},
+  journal={The American journal of psychology},
+  volume={39},
+  number={1/4},
+  pages={106--124},
+  year={1927},
+  publisher={JSTOR}
+}
+
+@article{sherrington-1900,
+  title={Experiments on the value of vascular and visceral factors for the genesis of emotion},
+  author={Sherrington, Charles Scott},
+  journal={Proceedings of the Royal Society of London},
+  volume={66},
+  number={424-433},
+  pages={390--403},
+  year={1900},
+  publisher={The Royal Society London}
+}
+
+@article{triarhou-2008,
+  title={Centenary of Christfried Jakob's discovery of the visceral brain: An unheeded precedence in affective neuroscience},
+  author={Triarhou, Lazaros C},
+  journal={Neuroscience \& Biobehavioral Reviews},
+  volume={32},
+  number={5},
+  pages={984--1000},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@book{eysenck-2004,
+  title={Psychology: An international perspective},
+  author={Eysenck, Michael W},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
+
+@article{papez-1937,
+  title={A proposed mechanism of emotion},
+  author={Papez, James W},
+  journal={Archives of Neurology \& Psychiatry},
+  volume={38},
+  number={4},
+  pages={725--743},
+  year={1937},
+  publisher={American Medical Association}
+}
+
+@article{cesario-et-al-2020,
+  title={Your Brain Is Not an Onion with a Tiny Reptile Inside},
+  author={Cesario, Joseph and Johnson, David J and Eisthen, Heather L},
+  journal={Current Directions in Psychological Science},
+  pages={0963721420917687},
+  year={2020},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{maclean-1949,
+  title={Psychosomatic disease and the" visceral brain"; recent developments bearing on the Papez theory of emotion.},
+  author={MacLean, Paul D},
+  journal={Psychosomatic medicine},
+  year={1949},
+  publisher={Lippincott Williams \& Wilkins}
+}
+
+@article{weiskrantz-1956,
+  title={Behavioral changes associated with ablation of the amygdaloid complex in monkeys.},
+  author={Weiskrantz, Lawrence},
+  journal={Journal of comparative and physiological psychology},
+  volume={49},
+  number={4},
+  pages={381},
+  year={1956},
+  publisher={American Psychological Association}
+}
+
+@article{gu-et-al-2013,
+  title={Anterior insular cortex and emotional awareness},
+  author={Gu, Xiaosi and Hof, Patrick R and Friston, Karl J and Fan, Jin},
+  journal={Journal of Comparative Neurology},
+  volume={521},
+  number={15},
+  pages={3371--3388},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
+@article{bush-et-al-2000,
+  title={Cognitive and emotional influences in anterior cingulate cortex},
+  author={Bush, George and Luu, Phan and Posner, Michael I},
+  journal={Trends in cognitive sciences},
+  volume={4},
+  number={6},
+  pages={215--222},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@article{allman-et-al-2001,
+  title={The anterior cingulate cortex: the evolution of an interface between emotion and cognition},
+  author={Allman, John M and Hakeem, Atiya and Erwin, Joseph M and Nimchinsky, Esther and Hof, Patrick},
+  journal={Annals of the New York Academy of Sciences},
+  volume={935},
+  number={1},
+  pages={107--117},
+  year={2001},
+  publisher={Blackwell Publishing Ltd Oxford, UK}
+}
+
+@article{logothetis-et-al-2001,
+  title={Neurophysiological investigation of the basis of the fMRI signal},
+  author={Logothetis, Nikos K and Pauls, Jon and Augath, Mark and Trinath, Torsten and Oeltermann, Axel},
+  journal={Nature},
+  volume={412},
+  number={6843},
+  pages={150--157},
+  year={2001},
+  publisher={Nature Publishing Group}
+}
+
+@article{pauling-coryell-1936,
+  title={The magnetic properties and structure of hemoglobin, oxyhemoglobin and carbonmonoxyhemoglobin},
+  author={Pauling, Linus and Coryell, Charles D},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={22},
+  number={4},
+  pages={210--216},
+  year={1936},
+  publisher={National Acad Sciences}
+}
+
+@article{ogawa-et-al-1990,
+  title={Oxygenation-sensitive contrast in magnetic resonance image of rodent brain at high magnetic fields},
+  author={Ogawa, Seiji and Lee, Tso-Ming and Nayak, Asha S and Glynn, Paul},
+  journal={Magnetic resonance in medicine},
+  volume={14},
+  number={1},
+  pages={68--78},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{ogawa-lee-1990,
+  title={Magnetic resonance imaging of blood vessels at high fields: in vivo and in vitro measurements and image simulation},
+  author={Ogawa, Seiji and Lee, Tso-Ming},
+  journal={Magnetic resonance in medicine},
+  volume={16},
+  number={1},
+  pages={9--18},
+  year={1990},
+  publisher={Wiley Online Library}
+}
+
+@article{ogawa-et-al-1990-2,
+  title={Brain magnetic resonance imaging with contrast dependent on blood oxygenation},
+  author={Ogawa, Seiji and Lee, Tso-Ming and Kay, Alan R and Tank, David W},
+  journal={proceedings of the National Academy of Sciences},
+  volume={87},
+  number={24},
+  pages={9868--9872},
+  year={1990},
+  publisher={National Acad Sciences}
+}
+
+@article{ogawa-et-al-1992,
+  title={Intrinsic signal changes accompanying sensory stimulation: functional brain mapping with magnetic resonance imaging},
+  author={Ogawa, Seiji and Tank, David W and Menon, Ravi and Ellermann, Jutta M and Kim, Seong G and Merkle, Helmut and Ugurbil, Kamil},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={89},
+  number={13},
+  pages={5951--5955},
+  year={1992},
+  publisher={National Acad Sciences}
+}
+
+@article{uludag-et-al-2005,
+  title={Basic principles of functional MRI},
+  author={Uludag, K{\^a}mil and Dubowitz, David J and Buxton, Richard B},
+  journal={Clinical MRI. Elsevier, San Diego},
+  pages={249--287},
+  year={2005}
+}
+
+@book{dawkins-1976,
+  title={The selfish gene},
+  author={Dawkins, Richard},
+  year={1976},
+  publisher={Oxford university press}
+}
+
+@book{wilson-2012,
+  title={The social conquest of earth},
+  author={Wilson, Edward O},
+  year={2012},
+  publisher={WW Norton \& Company}
+}
+
+@article{stringer-et-al-2019,
+  title={Spontaneous behaviors drive multidimensional, brainwide activity},
+  author={Stringer, Carsen and Pachitariu, Marius and Steinmetz, Nicholas and Reddy, Charu Bai and Carandini, Matteo and Harris, Kenneth D},
+  journal={Science},
+  volume={364},
+  number={6437},
+  pages={eaav7893},
+  year={2019},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{conley-et-al-2018,
+  title={The racially diverse affective expression (RADIATE) face stimulus set},
+  author={Conley, May I and Dellarco, Danielle V and Rubien-Thomas, Estee and Cohen, Alexandra O and Cervera, Alessandra and Tottenham, Nim and Casey, BJ},
+  journal={Psychiatry research},
+  volume={270},
+  pages={1059--1067},
+  year={2018},
+  publisher={Elsevier}
 }
