clarify face neuronal code at intro, mention cerebellar stuff during anatomical listing

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -1675,3 +1675,34 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
   year={2018},
   publisher={Elsevier}
 }
+
+@article{grossman-et-al-2019,
+  title={Convergent evolution of face spaces across human face-selective neuronal groups and deep convolutional networks},
+  author={Grossman, Shany and Gaziv, Guy and Yeagle, Erin M and Harel, Michal and M{\'e}gevand, Pierre and Groppe, David M and Khuvis, Simon and Herrero, Jose L and Irani, Michal and Mehta, Ashesh D and Malach, Rafael},
+  journal={Nature communications},
+  volume={10},
+  number={1},
+  pages={1--13},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
+@article{quiroga-et-al-2005,
+  title={Invariant visual representation by single neurons in the human brain},
+  author={Quiroga, R Quian and Reddy, Leila and Kreiman, Gabriel and Koch, Christof and Fried, Itzhak},
+  journal={Nature},
+  volume={435},
+  number={7045},
+  pages={1102--1107},
+  year={2005},
+  publisher={Nature Publishing Group}
+}
+
+@article{schmahmann-sherman-1997,
+  title={Cerebellar cognitive affective syndrome.},
+  author={Schmahmann, Jeremy D and Sherman, Janet C},
+  journal={International review of neurobiology},
+  volume={41},
+  pages={433--440},
+  year={1997}
+}
