pattern analysis: GLM

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -428,10 +428,7 @@ volume = {15},
 number = {2},
 pages = {143-165},
 year  = {2001},
-publisher = {Routledge},
-doi = {10.1080/02699930125768},
-URL = {https://doi.org/10.1080/02699930125768},
-eprint = {https://doi.org/10.1080/02699930125768}
+publisher = {Routledge}
 }
 
 @article{hermans-et-al-2000,
@@ -674,11 +671,7 @@ doi = {10.1037/0096-3445.127.3.286}
    number = {3},
    pages = {257-269},
    year  = {2011},
-   publisher = {Routledge},
-   doi = {10.1080/17470919.2010.515722},
-   note ={PMID: 20924978},
-   URL = {https://doi.org/10.1080/17470919.2010.515722},
-   eprint = {https://doi.org/10.1080/17470919.2010.515722}
+   publisher = {Routledge}
 }
 
 @article{vossel-et-al-2014,
@@ -688,11 +681,7 @@ journal = {The Neuroscientist},
 volume = {20},
 number = {2},
 pages = {150-159},
-year = {2014},
-doi = {10.1177/1073858413494269},
-    note ={PMID: 23835449},
-URL = {https://doi.org/10.1177/1073858413494269},
-eprint = {https://doi.org/10.1177/1073858413494269}
+year = {2014}
 }
 
 @article{macaluso-2010,
@@ -842,10 +831,7 @@ bookTitle="Mind the Gap: Tracing the Origins of Human Universals",
 year="2010",
 publisher="Springer Berlin Heidelberg",
 address="Berlin, Heidelberg",
-pages="261--280",
-isbn="978-3-642-02725-3",
-doi="10.1007/978-3-642-02725-3_12",
-url="https://doi.org/10.1007/978-3-642-02725-3_12"
+pages="261--280"
 }
 
 @article{donath-2007,
@@ -1444,7 +1430,6 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
 
 @article{james-1884,
  ISSN = {00264423, 14602113},
- URL = {http://www.jstor.org/stable/2246769},
  author = {William James},
  journal = {Mind},
  number = {34},
@@ -1705,4 +1690,169 @@ url="https://doi.org/10.1007/978-3-642-02725-3_12"
   volume={41},
   pages={433--440},
   year={1997}
+}
+
+@article{tinbergen-1963,
+  title={On aims and methods of ethology},
+  author={Tinbergen, Niko},
+  journal={Zeitschrift f{\"u}r tierpsychologie},
+  volume={20},
+  number={4},
+  pages={410--433},
+  year={1963},
+  publisher={Wiley Online Library}
+}
+
+@article{reggev-et-al-2020,
+  title={Human face-selective cortex does not distinguish between members of a racial outgroup},
+  author={Reggev, Niv and Brodie, Kirstan and Cikara, Mina and Mitchell, Jason P},
+  journal={Eneuro},
+  volume={7},
+  number={3},
+  year={2020},
+  publisher={Society for Neuroscience}
+}
+
+@article{liu-et-al-2014,
+  title={Seeing Jesus in toast: neural and behavioral correlates of face pareidolia},
+  author={Liu, Jiangang and Li, Jun and Feng, Lu and Li, Ling and Tian, Jie and Lee, Kang},
+  journal={Cortex},
+  volume={53},
+  pages={60--77},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@article{friston-et-al-1991,
+  title={Comparing functional (PET) images: the assessment of significant change},
+  author={Friston, Karl J and Frith, CD and Liddle, PF and Frackowiak, RSJ},
+  journal={Journal of Cerebral Blood Flow \& Metabolism},
+  volume={11},
+  number={4},
+  pages={690--699},
+  year={1991},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{worsley-et-al-1992,
+  title={A three-dimensional statistical analysis for CBF activation studies in human brain},
+  author={Worsley, Keith J and Evans, Alan C and Marrett, Sean and Neelin, P},
+  journal={Journal of Cerebral Blood Flow \& Metabolism},
+  volume={12},
+  number={6},
+  pages={900--918},
+  year={1992},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
+@article{nelder-wedderburn-1972,
+  title={Generalized linear models},
+  author={Nelder, John Ashworth and Wedderburn, Robert WM},
+  journal={Journal of the Royal Statistical Society: Series A (General)},
+  volume={135},
+  number={3},
+  pages={370--384},
+  year={1972},
+  publisher={Wiley Online Library}
+}
+
+@book{legendre-1805,
+  title={Nouvelles m{\'e}thodes pour la d{\'e}termination des orbites des com{\`e}tes},
+  author={Legendre, Adrien Marie},
+  year={1805},
+  publisher={F. Didot}
+}
+
+@book{gauss-1823,
+  title={Theoria combinationis observationum erroribus minimis obnoxiae},
+  author={Gauss, Carl Friedrich},
+  volume={1},
+  year={1823},
+  publisher={H. Dieterich}
+}
+
+@article{yule-1897,
+  title={On the theory of correlation},
+  author={Yule, G Udny},
+  journal={Journal of the Royal Statistical Society},
+  volume={60},
+  number={4},
+  pages={812--854},
+  year={1897},
+  publisher={JSTOR}
+}
+
+@article{pearson-1903,
+  title={The law of ancestral heredity},
+  author={Pearson, Karl},
+  journal={Biometrika},
+  volume={2},
+  number={2},
+  pages={211--228},
+  year={1903},
+  publisher={Oxford University Press}
+}
+
+@article{fisher-1922,
+  title={The goodness of fit of regression formulae, and the distribution of regression coefficients},
+  author={Fisher, Ronald A},
+  journal={Journal of the Royal Statistical Society},
+  volume={85},
+  number={4},
+  pages={597--612},
+  year={1922},
+  publisher={JSTOR}
+}
+
+@article{berridge-kringelbach-2008,
+  title={Affective neuroscience of pleasure: reward in humans and animals},
+  author={Berridge, Kent C and Kringelbach, Morten L},
+  journal={Psychopharmacology},
+  volume={199},
+  number={3},
+  pages={457--480},
+  year={2008},
+  publisher={Springer}
+}
+
+@article{chialvo-2010,
+  title={Emergent complex neural dynamics},
+  author={Chialvo, Dante R},
+  journal={Nature physics},
+  volume={6},
+  number={10},
+  pages={744--750},
+  year={2010},
+  publisher={Nature Publishing Group}
+}
+
+@article{kording-wolpert-2006,
+  title={Bayesian decision theory in sensorimotor control},
+  author={K{\"o}rding, Konrad P and Wolpert, Daniel M},
+  journal={Trends in cognitive sciences},
+  volume={10},
+  number={7},
+  pages={319--326},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@book{sutton-barto-2018,
+  title={Reinforcement learning: An introduction},
+  author={Sutton, Richard S and Barto, Andrew G},
+  year={2018}
+}
+
+@techreport{bentham-1781,
+  title={An introduction to the principles of morals and legislation},
+  author={Bentham, Jeremy},
+  year={1781},
+  institution={McMaster University Archive for the History of Economic Thought}
+}
+
+@book{jevons-1879,
+  title={The theory of political economy},
+  author={Jevons, William Stanley},
+  year={1879},
+  publisher={Macmillan}
 }
