major changes up until analysis methods (preprocessing)

--- a/source/references/references.bib
+++ b/source/references/references.bib
@@ -1619,7 +1619,7 @@ pages="261--280"
 }
 
 @article{uludag-et-al-2005,
-  title={Basic principles of functional MRI},
+  title={Basic principles of functional {MRI}},
   author={Uludag, K{\^a}mil and Dubowitz, David J and Buxton, Richard B},
   journal={Clinical MRI. Elsevier, San Diego},
   pages={249--287},
@@ -1855,4 +1855,217 @@ pages="261--280"
   author={Jevons, William Stanley},
   year={1879},
   publisher={Macmillan}
+}
+
+@electronic{scidraw-2020,
+  author        = "Scidraw",
+  title         = "Neuron silhouette. Zenodo. Creative Commons
+                  Attribution 4.0 International",
+  url           = "https://doi.org/10.5281/zenodo.3925927",
+  year          = "2020"
+}
+
+@article{gerlach-stern-1922-1,
+  title={Der experimentelle nachweis der richtungsquantelung im magnetfeld},
+  author={Gerlach, Walther and Stern, Otto},
+  journal={Zeitschrift f{\"u}r Physik},
+  volume={9},
+  number={1},
+  pages={349--352},
+  year={1922}
+}
+
+@article{gerlach-stern-1922-2,
+  title={Das magnetische moment des silberatoms},
+  author={Gerlach, Walther and Stern, Otto},
+  journal={Zeitschrift f{\"u}r Physik},
+  volume={9},
+  number={1},
+  pages={353--355},
+  year={1922},
+  publisher={Springer}
+}
+
+@article{uhlenbeck-goudsmit-1925,
+  title={Ersetzung der Hypothese vom unmechanischen Zwang durch eine Forderung bez{\"u}glich des inneren Verhaltens jedes einzelnen Elektrons},
+  author={Uhlenbeck, George E and Goudsmit, Samuel},
+  journal={Naturwissenschaften},
+  volume={13},
+  number={47},
+  pages={953--954},
+  year={1925},
+  publisher={Springer Berlin/Heidelberg}
+}
+
+@article{pauli-1924,
+  title={{\"U}ber den Einflu{\ss} der Geschwindigkeitsabh{\"a}ngigkeit der Elektronenmasse auf den Zeemaneffekt},
+  author={Pauli, Wolfgang},
+  journal={Zeitschrift f{\"u}r Physik},
+  volume={31},
+  number={1},
+  pages={373--385},
+  year={1924},
+  publisher={Springer}
+}
+
+@incollection{pauli-1927,
+  title={Zur quantenmechanik des magnetischen elektrons},
+  author={Pauli, Wolfgang},
+  booktitle={Wolfgang Pauli},
+  pages={282--305},
+  year={1927},
+  publisher={Springer}
+}
+
+@inproceedings{preston-1898,
+  title={Radiation phenomena in a strong magnetic field:...},
+  author={Preston, Thomas},
+  year={1898},
+  organization={R. Dublin Soc.}
+}
+
+@article{li-et-al-2016,
+  title={The first step for neuroimaging data analysis: DICOM to NIfTI conversion},
+  author={Li, Xiangrui and Morgan, Paul S and Ashburner, John and Smith, Jolinda and Rorden, Christopher},
+  journal={Journal of neuroscience methods},
+  volume={264},
+  pages={47--56},
+  year={2016},
+  publisher={Elsevier}
+}
+
+@software{bedetti-et-al-2019,
+  author       = {Christophe Bedetti and
+                  Johan Carlin and
+                  Michael Joseph and
+                  Isla and
+                  Hrvoje Stojic and
+                  Erik Kastman},
+  title        = {cbedetti/Dcm2Bids 2.1.4},
+  month        = apr,
+  year         = 2019,
+  publisher    = {Zenodo},
+  version      = {2.1.4},
+  doi          = {10.5281/zenodo.2628725},
+  url          = {https://doi.org/10.5281/zenodo.2628725}
+}
+
+@software{faruk-gulban-et-al-2019,
+  author       = {Omer Faruk Gulban and
+                  Dylan Nielson and
+                  Russ Poldrack and
+                  john lee and
+                  Chris Gorgolewski and
+                  Vanessasaurus and
+                  Satrajit Ghosh},
+  title        = {poldracklab/pydeface: v2.0.0},
+  month        = oct,
+  year         = 2019,
+  publisher    = {Zenodo},
+  version      = {v2.0.0},
+  doi          = {10.5281/zenodo.3524401},
+  url          = {https://doi.org/10.5281/zenodo.3524401}
+}
+
+@article{gorgolewski-et-al-2016,
+  title={The brain imaging data structure, a format for organizing and describing outputs of neuroimaging experiments},
+  author={Gorgolewski, Krzysztof J and Auer, Tibor and Calhoun, Vince D and Craddock, R Cameron and Das, Samir and Duff, Eugene P and Flandin, Guillaume and Ghosh, Satrajit S and Glatard, Tristan and Halchenko, Yaroslav O and others},
+  journal={Scientific data},
+  volume={3},
+  number={1},
+  pages={1--9},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
+@article{cox-et-al-2004,
+  title={A (Sort of) new image data format standard: NIfTI-1: WE 150},
+  author={Cox, Robert and Ashburner, John and Breman, Hester and Fissell, Kate and Haselgrove, Christian and Holmes, Colin and Lancaster, Jack and Rex, David and Smith, Stephen and Woodward, Jeffrey and others},
+  journal={Neuroimage},
+  volume={22},
+  year={2004}
+}
+
+@inproceedings{mustra-et-al-2008,
+  title={Overview of the DICOM standard},
+  author={Mustra, Mario and Delac, Kresimir and Grgic, Mislav},
+  booktitle={2008 50th International Symposium ELMAR},
+  volume={1},
+  pages={39--44},
+  year={2008},
+  organization={IEEE}
+}
+
+@article{manjon-coupe-2016,
+  title={volBrain: an online MRI brain volumetry system},
+  author={Manj{\'o}n, Jos{\'e} V and Coup{\'e}, Pierrick},
+  journal={Frontiers in neuroinformatics},
+  volume={10},
+  pages={30},
+  year={2016},
+  publisher={Frontiers}
+}
+
+@article{jenkinson-et-al-2012,
+  title={Fsl},
+  author={Jenkinson, Mark and Beckmann, Christian F and Behrens, Timothy EJ and Woolrich, Mark W and Smith, Stephen M},
+  journal={Neuroimage},
+  volume={62},
+  number={2},
+  pages={782--790},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{jenkinson-smith-2001,
+  title={A global optimisation method for robust affine registration of brain images},
+  author={Jenkinson, Mark and Smith, Stephen},
+  journal={Medical image analysis},
+  volume={5},
+  number={2},
+  pages={143--156},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{jenkinson-et-al-2002,
+  title={Improved optimization for the robust and accurate linear registration and motion correction of brain images},
+  author={Jenkinson, Mark and Bannister, Peter and Brady, Michael and Smith, Stephen},
+  journal={Neuroimage},
+  volume={17},
+  number={2},
+  pages={825--841},
+  year={2002},
+  publisher={Academic Press}
+}
+
+@article{woolrich-et-al-2001,
+  title={Temporal autocorrelation in univariate linear modeling of FMRI data},
+  author={Woolrich, Mark W and Ripley, Brian D and Brady, Michael and Smith, Stephen M},
+  journal={Neuroimage},
+  volume={14},
+  number={6},
+  pages={1370--1386},
+  year={2001},
+  publisher={Academic Press}
+}
+
+@article{fonov-et-al-2009,
+  title={Unbiased nonlinear average age-appropriate brain templates from birth to adulthood},
+  author={Fonov, Vladimir S and Evans, Alan C and McKinstry, Robert C and Almli, CR and Collins, DL},
+  journal={NeuroImage},
+  number={47},
+  pages={S102},
+  year={2009}
+}
+
+@article{fonov-et-al-2011,
+  title={Unbiased average age-appropriate atlases for pediatric studies},
+  author={Fonov, Vladimir and Evans, Alan C and Botteron, Kelly and Almli, C Robert and McKinstry, Robert C and Collins, D Louis and Brain Development Cooperative Group and others},
+  journal={Neuroimage},
+  volume={54},
+  number={1},
+  pages={313--327},
+  year={2011},
+  publisher={Elsevier}
 }
